// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateFIPS Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StateFIPS
    handleCheck={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                States
        </label>
        <CheckboxTree
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expanded={Array []}
                name={undefined}
                nameAsArray={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [],
                                  "icon": <i
                                    className="fa fa-globe"
                        />,
                                  "label": "All States",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onExpand={[Function]}
                optimisticToggle={true}
                showNodeIcon={true}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            States
</label>,
          <CheckboxTree
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expanded={Array []}
            name={undefined}
            nameAsArray={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [],
                                      "icon": <i
                                        className="fa fa-globe"
                        />,
                                      "label": "All States",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onExpand={[Function]}
            optimisticToggle={true}
            showNodeIcon={true}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "States",
            "className": "label",
          },
          "ref": null,
          "rendered": "States",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expanded": Array [],
            "name": undefined,
            "nameAsArray": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [],
                "icon": <i
                  className="fa fa-globe"
/>,
                "label": "All States",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onExpand": [Function],
            "optimisticToggle": true,
            "showNodeIcon": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    States
          </label>
          <CheckboxTree
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expanded={Array []}
                    name={undefined}
                    nameAsArray={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [],
                                          "icon": <i
                                            className="fa fa-globe"
                              />,
                                          "label": "All States",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onExpand={[Function]}
                    optimisticToggle={true}
                    showNodeIcon={true}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              States
</label>,
            <CheckboxTree
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expanded={Array []}
              name={undefined}
              nameAsArray={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [],
                                            "icon": <i
                                              className="fa fa-globe"
                            />,
                                            "label": "All States",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onExpand={[Function]}
              optimisticToggle={true}
              showNodeIcon={true}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "States",
              "className": "label",
            },
            "ref": null,
            "rendered": "States",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expanded": Array [],
              "name": undefined,
              "nameAsArray": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [],
                  "icon": <i
                    className="fa fa-globe"
/>,
                  "label": "All States",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onExpand": [Function],
              "optimisticToggle": true,
              "showNodeIcon": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`StateFIPS Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StateFIPS
    handleCheck={[Function]}
    measureId="123"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                States
        </label>
        <CheckboxTree
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expanded={Array []}
                name={undefined}
                nameAsArray={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "icon": <i
                                        className="fa fa-flag-o"
                        />,
                                      "label": "Alabama",
                                      "value": "01",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-flag-o"
                        />,
                                      "label": "Alaska",
                                      "value": "02",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-flag-o"
                        />,
                                      "label": "Arizona",
                                      "value": "04",
                                    },
                                  ],
                                  "icon": <i
                                    className="fa fa-globe"
                        />,
                                  "label": "All States",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onExpand={[Function]}
                optimisticToggle={true}
                showNodeIcon={true}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            States
</label>,
          <CheckboxTree
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expanded={Array []}
            name={undefined}
            nameAsArray={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "icon": <i
                                            className="fa fa-flag-o"
                        />,
                                          "label": "Alabama",
                                          "value": "01",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-flag-o"
                        />,
                                          "label": "Alaska",
                                          "value": "02",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-flag-o"
                        />,
                                          "label": "Arizona",
                                          "value": "04",
                                        },
                                      ],
                                      "icon": <i
                                        className="fa fa-globe"
                        />,
                                      "label": "All States",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onExpand={[Function]}
            optimisticToggle={true}
            showNodeIcon={true}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "States",
            "className": "label",
          },
          "ref": null,
          "rendered": "States",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expanded": Array [],
            "name": undefined,
            "nameAsArray": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [
                  Object {
                    "icon": <i
                      className="fa fa-flag-o"
/>,
                    "label": "Alabama",
                    "value": "01",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-flag-o"
/>,
                    "label": "Alaska",
                    "value": "02",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-flag-o"
/>,
                    "label": "Arizona",
                    "value": "04",
                  },
                ],
                "icon": <i
                  className="fa fa-globe"
/>,
                "label": "All States",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onExpand": [Function],
            "optimisticToggle": true,
            "showNodeIcon": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    States
          </label>
          <CheckboxTree
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expanded={Array []}
                    name={undefined}
                    nameAsArray={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "icon": <i
                                                className="fa fa-flag-o"
                              />,
                                              "label": "Alabama",
                                              "value": "01",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-flag-o"
                              />,
                                              "label": "Alaska",
                                              "value": "02",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-flag-o"
                              />,
                                              "label": "Arizona",
                                              "value": "04",
                                            },
                                          ],
                                          "icon": <i
                                            className="fa fa-globe"
                              />,
                                          "label": "All States",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onExpand={[Function]}
                    optimisticToggle={true}
                    showNodeIcon={true}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              States
</label>,
            <CheckboxTree
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expanded={Array []}
              name={undefined}
              nameAsArray={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [
                                              Object {
                                                "icon": <i
                                                  className="fa fa-flag-o"
                            />,
                                                "label": "Alabama",
                                                "value": "01",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-flag-o"
                            />,
                                                "label": "Alaska",
                                                "value": "02",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-flag-o"
                            />,
                                                "label": "Arizona",
                                                "value": "04",
                                              },
                                            ],
                                            "icon": <i
                                              className="fa fa-globe"
                            />,
                                            "label": "All States",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onExpand={[Function]}
              optimisticToggle={true}
              showNodeIcon={true}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "States",
              "className": "label",
            },
            "ref": null,
            "rendered": "States",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expanded": Array [],
              "name": undefined,
              "nameAsArray": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [
                    Object {
                      "icon": <i
                        className="fa fa-flag-o"
/>,
                      "label": "Alabama",
                      "value": "01",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-flag-o"
/>,
                      "label": "Alaska",
                      "value": "02",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-flag-o"
/>,
                      "label": "Arizona",
                      "value": "04",
                    },
                  ],
                  "icon": <i
                    className="fa fa-globe"
/>,
                  "label": "All States",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onExpand": [Function],
              "optimisticToggle": true,
              "showNodeIcon": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
